--- a/src/main/resources/com/elcheno/trues/templateView.fxml
+++ b/src/main/resources/com/elcheno/trues/templateView.fxml
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
@@ -14,82 +10,13 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="750.0" prefWidth="1000.0" styleClass="body" stylesheets="@style/styleHome.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.elcheno.trues.LineController">
+<AnchorPane prefHeight="750.0" prefWidth="1000.0" styleClass="body" stylesheets="@style/styleHome.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.elcheno.trues.EmployeeController">
    <children>
-      <VBox alignment="TOP_CENTER" layoutX="228.0" layoutY="112.0" prefHeight="639.0" prefWidth="790.0">
+      <VBox alignment="TOP_CENTER" layoutX="227.0" layoutY="41.0" prefHeight="711.0" prefWidth="790.0">
          <children>
-            <HBox alignment="CENTER" prefHeight="153.0" prefWidth="790.0">
-               <children>
-                  <Pane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="210.0" prefWidth="636.0" styleClass="pane">
-                     <children>
-                        <HBox maxWidth="700.0" prefHeight="153.0" prefWidth="636.0">
-                           <children>
-                              <VBox alignment="CENTER" prefHeight="133.0" prefWidth="212.0">
-                                 <children>
-                                    <Label fx:id="txtEmployee" text="/">
-                                       <font>
-                                          <Font size="36.0" />
-                                       </font>
-                                    </Label>
-                                    <Text strokeType="OUTSIDE" strokeWidth="0.0" text="EMPLOYEES">
-                                       <font>
-                                          <Font size="18.0" />
-                                       </font>
-                                    </Text>
-                                 </children>
-                              </VBox>
-                              <VBox alignment="CENTER" prefHeight="133.0" prefWidth="212.0">
-                                 <children>
-                                    <HBox alignment="CENTER" prefHeight="156.0" prefWidth="212.0">
-                                       <children>
-                                          <TextField fx:id="fieldTxtEmp" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="165.0" />
-                                          <Button fx:id="btnEmpLine" mnemonicParsing="false" onAction="#addEmployeeLine" prefHeight="25.0" prefWidth="30.0">
-                                             <styleClass>
-                                                <String fx:value="btnNav" />
-                                                <String fx:value="btnEmpLine" />
-                                             </styleClass>
-                                          </Button>
-                                       </children>
-                                    </HBox>
-                                 </children>
-                              </VBox>
-                              <VBox alignment="CENTER" prefHeight="133.0" prefWidth="212.0">
-                                 <children>
-                                    <Label fx:id="txtProduct" text="/">
-                                       <font>
-                                          <Font size="36.0" />
-                                       </font>
-                                    </Label>
-                                    <Text strokeType="OUTSIDE" strokeWidth="0.0" text="PRODUCTS">
-                                       <font>
-                                          <Font size="18.0" />
-                                       </font>
-                                    </Text>
-                                 </children>
-                              </VBox>
-                           </children>
-                        </HBox>
-                     </children>
-                  </Pane>
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" prefHeight="446.0" prefWidth="790.0">
-               <children>
-                  <TableView fx:id="table" prefHeight="387.0" prefWidth="635.0">
-                    <columns>
-                      <TableColumn fx:id="colCod" prefWidth="211.0" text="COD" />
-                      <TableColumn fx:id="colName" prefWidth="211.0" text="NAME" />
-                        <TableColumn fx:id="colLastname" prefWidth="211.0" text="LASTNAME" />
-                    </columns>
-                     <HBox.margin>
-                        <Insets top="30.0" />
-                     </HBox.margin>
-                  </TableView>
-               </children>
-            </HBox>
             <HBox alignment="TOP_RIGHT" prefHeight="35.0" prefWidth="700.0">
                <children>
-                  <Button fx:id="btnRegresh" mnemonicParsing="false" onAction="#reloadInfo" prefHeight="25.0" prefWidth="33.0" styleClass="btnRefresh" stylesheets="@style/styleHome.css">
+                  <Button fx:id="btnRefresh" mnemonicParsing="false" onAction="#reloadInfo" prefHeight="25.0" prefWidth="33.0" styleClass="btnRefresh" stylesheets="@style/styleHome.css">
                      <HBox.margin>
                         <Insets bottom="10.0" left="5.0" right="20.0" top="5.0" />
                      </HBox.margin>
@@ -142,7 +69,7 @@
                         <Font size="14.0" />
                      </font>
                   </Button>
-                  <Button fx:id="btnLineView" mnemonicParsing="false" onAction="#reloadInfo" prefHeight="44.0" prefWidth="176.0" styleClass="btnNav" stylesheets="@style/styleHome.css" text="LINE" textFill="WHITE">
+                  <Button fx:id="btnLineView" mnemonicParsing="false" onAction="#lineView" prefHeight="44.0" prefWidth="176.0" styleClass="btnNav" stylesheets="@style/styleHome.css" text="LINES" textFill="WHITE">
                      <VBox.margin>
                         <Insets bottom="7.0" left="7.0" right="7.0" top="7.0" />
                      </VBox.margin>
@@ -150,7 +77,7 @@
                         <Font size="14.0" />
                      </font>
                   </Button>
-                  <Button fx:id="btnEmpView" mnemonicParsing="false" onAction="#employeeView" prefHeight="44.0" prefWidth="176.0" styleClass="btnNav" stylesheets="@style/styleHome.css" text="EMPLOYEES" textFill="WHITE">
+                  <Button fx:id="btnEmpView" mnemonicParsing="false" onAction="#reloadInfo" prefHeight="44.0" prefWidth="176.0" styleClass="btnNav" stylesheets="@style/styleHome.css" text="EMPLOYEES" textFill="WHITE">
                      <VBox.margin>
                         <Insets bottom="7.0" left="7.0" right="7.0" top="7.0" />
                      </VBox.margin>
