push5.2: LineView completa y ProductView funcional

--- a/src/main/resources/com/elcheno/trues/product.fxml
+++ b/src/main/resources/com/elcheno/trues/product.fxml
@@ -73,6 +73,15 @@
             </HBox>
             <HBox alignment="CENTER_RIGHT" prefHeight="42.0" prefWidth="790.0">
                <children>
+                  <Button fx:id="btnUpdate" maxHeight="-Infinity" mnemonicParsing="false" onAction="#updateProduct" prefHeight="30.0" prefWidth="41.0">
+                     <styleClass>
+                        <String fx:value="btnNav" />
+                        <String fx:value="btnUpdate" />
+                     </styleClass>
+                     <HBox.margin>
+                        <Insets bottom="5.0" right="10.0" />
+                     </HBox.margin>
+                  </Button>
                   <Button fx:id="btnInfo" maxHeight="-Infinity" mnemonicParsing="false" onAction="#infoProduct" prefHeight="30.0" prefWidth="41.0">
                      <styleClass>
                         <String fx:value="btnNav" />
