--- a/src/main/resources/com/elcheno/trues/employee.fxml
+++ b/src/main/resources/com/elcheno/trues/employee.fxml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
@@ -12,11 +15,108 @@
 
 <AnchorPane prefHeight="750.0" prefWidth="1000.0" styleClass="body" stylesheets="@style/styleHome.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.elcheno.trues.EmployeeController">
    <children>
-      <VBox alignment="TOP_CENTER" layoutX="227.0" layoutY="41.0" prefHeight="711.0" prefWidth="790.0">
+      <VBox alignment="TOP_CENTER" layoutX="237.0" layoutY="51.0" prefHeight="700.0" prefWidth="778.0">
          <children>
+            <HBox alignment="CENTER" prefHeight="185.0" prefWidth="778.0">
+               <children>
+                  <Pane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="153.0" prefWidth="636.0" styleClass="pane">
+                     <children>
+                        <HBox maxWidth="700.0" prefHeight="153.0" prefWidth="636.0">
+                           <children>
+                              <VBox alignment="CENTER" prefHeight="144.0" prefWidth="212.0">
+                                 <children>
+                                    <Label fx:id="txtEmpTotal" text="/">
+                                       <font>
+                                          <Font size="36.0" />
+                                       </font>
+                                    </Label>
+                                    <Text strokeType="OUTSIDE" strokeWidth="0.0" text="TOTAL EMPLOYEES" textAlignment="CENTER" wrappingWidth="98.65493774414062">
+                                       <font>
+                                          <Font size="18.0" />
+                                       </font>
+                                    </Text>
+                                 </children>
+                              </VBox>
+                              <VBox alignment="CENTER" prefHeight="133.0" prefWidth="212.0">
+                                 <children>
+                                    <HBox alignment="CENTER" prefHeight="157.0" prefWidth="212.0">
+                                       <children>
+                                          <Button fx:id="btnEmpLine" mnemonicParsing="false" onAction="#saveEmployee" prefHeight="52.0" prefWidth="52.0">
+                                             <styleClass>
+                                                <String fx:value="btnNav" />
+                                                <String fx:value="btnEmp" />
+                                             </styleClass>
+                                          </Button>
+                                       </children>
+                                    </HBox>
+                                 </children>
+                              </VBox>
+                              <VBox alignment="CENTER" prefHeight="133.0" prefWidth="212.0">
+                                 <children>
+                                    <Label fx:id="txtEmpToday" text="/">
+                                       <font>
+                                          <Font size="36.0" />
+                                       </font>
+                                    </Label>
+                                    <Text strokeType="OUTSIDE" strokeWidth="0.0" text="EMPLOYEES WORK" textAlignment="CENTER" wrappingWidth="101.6552734375">
+                                       <font>
+                                          <Font size="18.0" />
+                                       </font>
+                                    </Text>
+                                 </children>
+                              </VBox>
+                           </children>
+                        </HBox>
+                     </children>
+                  </Pane>
+               </children>
+            </HBox>
+            <HBox alignment="CENTER_RIGHT" prefHeight="42.0" prefWidth="790.0">
+               <children>
+                  <Button fx:id="btnUpdate" maxHeight="-Infinity" mnemonicParsing="false" prefHeight="30.0" prefWidth="41.0">
+                     <styleClass>
+                        <String fx:value="btnNav" />
+                        <String fx:value="btnUpdate" />
+                     </styleClass>
+                     <HBox.margin>
+                        <Insets bottom="5.0" right="10.0" />
+                     </HBox.margin>
+                  </Button>
+                  <Button fx:id="btnInfo" maxHeight="-Infinity" mnemonicParsing="false" prefHeight="30.0" prefWidth="41.0">
+                     <styleClass>
+                        <String fx:value="btnNav" />
+                        <String fx:value="btnInfo" />
+                     </styleClass>
+                     <HBox.margin>
+                        <Insets bottom="5.0" right="10.0" />
+                     </HBox.margin>
+                  </Button>
+                  <Button fx:id="btnRemove" maxHeight="-Infinity" mnemonicParsing="false" onAction="#removeEmployee" prefHeight="30.0" prefWidth="41.0">
+                     <HBox.margin>
+                        <Insets bottom="5.0" right="85.0" />
+                     </HBox.margin>
+                     <styleClass>
+                        <String fx:value="btnNav" />
+                        <String fx:value="btnRemove" />
+                     </styleClass>
+                  </Button>
+               </children>
+            </HBox>
+            <HBox alignment="CENTER" prefHeight="448.0" prefWidth="790.0">
+               <children>
+                  <TableView fx:id="table" prefHeight="189.0" prefWidth="636.0">
+                     <columns>
+                        <TableColumn fx:id="colDni" prefWidth="144.33334350585938" text="DNI" />
+                        <TableColumn fx:id="colCod" prefWidth="119.66665649414062" text="COD" />
+                        <TableColumn fx:id="colName" minWidth="0.0" prefWidth="159.6666259765625" text="NAME" />
+                        <TableColumn fx:id="colLastname" prefWidth="207.33331298828125" text="LASTNAME" />
+                     </columns>
+                  </TableView>
+               </children>
+            </HBox>
             <HBox alignment="TOP_RIGHT" prefHeight="35.0" prefWidth="700.0">
                <children>
-                  <Button fx:id="btnRefresh" mnemonicParsing="false" onAction="#reloadInfo" prefHeight="25.0" prefWidth="33.0" styleClass="btnRefresh" stylesheets="@style/styleHome.css">
+                  <Button fx:id="btnRefresh1" mnemonicParsing="false" onAction="#reloadInfo" prefHeight="25.0" prefWidth="33.0" styleClass="btnRefresh" stylesheets="@style/styleHome.css">
                      <HBox.margin>
                         <Insets bottom="10.0" left="5.0" right="20.0" top="5.0" />
                      </HBox.margin>
