--- a/src/main/resources/com/elcheno/trues/line.fxml
+++ b/src/main/resources/com/elcheno/trues/line.fxml
@@ -16,7 +16,7 @@
 
 <AnchorPane prefHeight="750.0" prefWidth="1000.0" styleClass="body" stylesheets="@style/styleHome.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.elcheno.trues.LineController">
    <children>
-      <VBox alignment="TOP_CENTER" layoutX="228.0" layoutY="112.0" prefHeight="639.0" prefWidth="790.0">
+      <VBox alignment="TOP_CENTER" layoutX="228.0" layoutY="59.0" prefHeight="692.0" prefWidth="790.0">
          <children>
             <HBox alignment="CENTER" prefHeight="153.0" prefWidth="790.0">
                <children>
@@ -73,9 +73,9 @@
                   </Pane>
                </children>
             </HBox>
-            <HBox alignment="CENTER" prefHeight="446.0" prefWidth="790.0">
+            <HBox alignment="CENTER" prefHeight="499.0" prefWidth="790.0">
                <children>
-                  <TableView fx:id="table" prefHeight="387.0" prefWidth="635.0">
+                  <TableView fx:id="table" prefHeight="496.0" prefWidth="635.0">
                     <columns>
                       <TableColumn fx:id="colCod" prefWidth="211.0" text="COD" />
                       <TableColumn fx:id="colName" prefWidth="211.0" text="NAME" />
@@ -87,7 +87,7 @@
                   </TableView>
                </children>
             </HBox>
-            <HBox alignment="TOP_RIGHT" prefHeight="35.0" prefWidth="700.0">
+            <HBox alignment="BOTTOM_RIGHT" prefHeight="29.0" prefWidth="790.0">
                <children>
                   <Button fx:id="btnRegresh" mnemonicParsing="false" onAction="#reloadInfo" prefHeight="25.0" prefWidth="33.0" styleClass="btnRefresh" stylesheets="@style/styleHome.css">
                      <HBox.margin>
