--- a/src/main/resources/com/elcheno/trues/productUpdate.fxml
+++ b/src/main/resources/com/elcheno/trues/productUpdate.fxml
@@ -3,6 +3,7 @@
 <?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
@@ -39,7 +40,11 @@
                                           <Font name="System Bold" size="14.0" />
                                        </font>
                                     </Text>
-                                    <TextField fx:id="codField" prefHeight="25.0" prefWidth="148.0" />
+                                    <Label fx:id="txtCod" text="/">
+                                       <font>
+                                          <Font size="14.0" />
+                                       </font>
+                                    </Label>
                                  </children>
                               </HBox>
                               <Text fill="#005a5a" strokeType="OUTSIDE" strokeWidth="0.0" text="DESCRIPTION">
