--- a/src/main/resources/com/elcheno/trues/employee.fxml
+++ b/src/main/resources/com/elcheno/trues/employee.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="750.0" prefWidth="1000.0" styleClass="body" stylesheets="@style/styleHome.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.elcheno.trues.EmployeeController">
+<AnchorPane prefHeight="750.0" prefWidth="1000.0" styleClass="body" stylesheets="@style/styleHome.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.elcheno.trues.controller.EmployeeController">
    <children>
       <VBox alignment="TOP_CENTER" layoutX="237.0" layoutY="51.0" prefHeight="700.0" prefWidth="778.0">
          <children>
