--- a/src/main/resources/com/elcheno/trues/employeeInfo.fxml
+++ b/src/main/resources/com/elcheno/trues/employeeInfo.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="300.0" styleClass="bodyModal" stylesheets="@style/styleHome.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.elcheno.trues.EmployeeInfoController">
+<AnchorPane prefHeight="400.0" prefWidth="300.0" styleClass="bodyModal" stylesheets="@style/styleHome.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.elcheno.trues.controller.EmployeeInfoController">
    <children>
       <VBox alignment="CENTER" layoutY="46.0" prefHeight="330.0" prefWidth="300.0">
          <children>
@@ -94,6 +94,7 @@
                               </HBox>
                            </children>
                         </VBox>
+                        <Pane fx:id="state" layoutX="227.0" layoutY="4.0" prefHeight="12.0" prefWidth="12.0" styleClass="state" />
                      </children>
                   </Pane>
                </children>
@@ -102,7 +103,7 @@
       </VBox>
       <Pane fx:id="navbar" prefHeight="44.0" prefWidth="300.0" styleClass="paneNavTop" stylesheets="@style/styleHome.css">
          <children>
-            <HBox fx:id="navbar" alignment="CENTER_RIGHT" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="31.0" prefWidth="300.0">
+            <HBox alignment="CENTER_RIGHT" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="31.0" prefWidth="300.0">
                <children>
                   <Button fx:id="btnMinWindow" mnemonicParsing="false" onAction="#minimizeWindows" prefHeight="36.0" prefWidth="26.0" styleClass="btnMin" stylesheets="@style/styleHome.css" text="―">
                      <font>
