--- a/src/main/resources/com/elcheno/trues/productUpdate.fxml
+++ b/src/main/resources/com/elcheno/trues/productUpdate.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="300.0" styleClass="bodyModal" stylesheets="@style/styleHome.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.elcheno.trues.ProductUpdateController">
+<AnchorPane prefHeight="400.0" prefWidth="300.0" styleClass="bodyModal" stylesheets="@style/styleHome.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.elcheno.trues.controller.ProductUpdateController">
    <children>
       <VBox alignment="CENTER" layoutY="44.0" prefHeight="356.0" prefWidth="300.0">
          <children>
